fixed z-index of editor__image

--- a/src/less/pleio.less
+++ b/src/less/pleio.less
@@ -45,10 +45,6 @@ input.___is-hidden {
     }
 }
 
-.editor__image {
-    z-index: 1;
-}
-
 .profile__editor {
     width: 100%;
 }
